--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Actualizar página
 <header class="main-header" role="banner">
 <div class="header-content">
 <div class="logo-container">
-<img src="https://i.imgur.com/TGNAk1M.png" alt="FoxWeb" class="main-logo" width="50" height="50" loading="lazy">
+<img src="/icon.png" alt="FoxWeb" class="main-logo" width="50" height="50" loading="lazy">
 <div class="logo-text">
 <h1>Fox<span>Web</span></h1>
 <p>Centro de descargas confiable</p>
