--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="noindex, follow">
 <title>Error 404</title>
 <meta name="description" content="La página que buscas no existe en FoxWeb">
 <link rel="icon" href="/icon.png" type="image/png">
