--- a/chat.html
+++ b/chat.html
@@ -1,7 +1,59 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="dark">
+<html lang="es">
 <head>
-<title></title>
-El chat no esta disponible en estos momentos.
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Chat no disponible</title>
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<style>
+        /* Estilo minimalista y elegante */
+        body {
+            background-color: #000000;
+            color: #ffffff;
+            /* Usamos fuentes predeterminadas del sistema para mayor elegancia y velocidad */
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        .content {
+            text-align: center;
+            padding: 40px;
+        }
+
+        h1 {
+            font-size: 2.2rem;
+            font-weight: 600;
+            margin-bottom: 0;
+            letter-spacing: -0.5px;
+        }
+
+        hr {
+            border: 0;
+            height: 1px;
+            background-color: #333333; /* Línea muy fina y discreta */
+            margin: 25px auto;
+            width: 80%;
+        }
+
+        p {
+            font-size: 1.1rem;
+            color: #888888; /* Gris suave para el subtítulo */
+            font-weight: 400;
+            margin: 0;
+        }
+</style>
 </head>
+<body>
+<div class="content">
+<h1>El chat no está disponible</h1>
+<hr>
+<p>Estamos haciendo actualizaciones y mantenimientos.</p>
+</div>
+</body>
 </html>
