--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@ Todo el contenido es gratuito y seguro.
 <h4>Enlaces Rápidos</h4>
 <ul class="footer-links" role="list">
 <li role="listitem">
-<button onclick="openModal('infoModal')" class="footer-link">
+<a href="https://foxweb.pages.dev/about" class="footer-link" style="text-decoration: none; display: inline-flex; align-items: center;">
 <i class="fa-solid fa-circle-info" aria-hidden="true"></i>
 Información del proyecto
-</button>
+</a>
 </li>
 <li role="listitem">
 <button onclick="openModal('donateModal')" class="footer-link">
