--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <meta name="robots" content="noindex, follow">
 <title>Error 404</title>
 <meta name="description" content="La página que buscas no existe en FoxWeb">
-<link rel="icon" href="/icon.png" type="image/png">
+<link rel="icon" href="/assets/icon.png" type="image/png">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <style>
@@ -182,7 +182,7 @@ max-width: 200px;
 <body>
 <div class="error-container">
 <div class="logo-container">
-<img src="/logo.png" alt="FoxWeb Logo" class="main-logo">
+<img src="/assets/logo.png" alt="FoxWeb Logo" class="main-logo">
 </div>
 <div class="error-code">404</div>
 <h1 class="error-title">¡Ups! Página no encontrada</h1>
