--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:description" content="Centro de descargas con software esencial, sistemas operativos Linux, juegos retro y utilidades. Enlaces directos y verificados.">
 <meta property="og:url" content="https://foxweb.pages.dev/">
 <meta property="og:type" content="website">
-<meta property="og:image" content="/logo.png">
+<meta property="og:image" content="/assets/logo.png">
 <meta property="og:image:alt" content="Logo de FoxWeb - Centro de descargas">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -23,7 +23,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="FoxWeb | Tu Centro de Descargas Confiable">
 <meta name="twitter:description" content="Descarga software gratis, sistemas Linux, juegos clásicos y APKs. Enlaces directos y duraderos para la comunidad.">
-<meta name="twitter:image" content="/logo.png">
+<meta name="twitter:image" content="/assets/logo.png">
 <meta name="twitter:site" content="@FoxOrange224">
 <meta name="twitter:creator" content="@FoxOrange224">
 <script type="application/ld+json">
@@ -39,7 +39,7 @@
 <meta name="application-name" content="FoxWeb">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="msapplication-TileColor" content="#FF4500">
-<meta name="msapplication-TileImage" content="/icon.png">
+<meta name="msapplication-TileImage" content="/assets/icon.png">
 <meta name="msapplication-config" content="browserconfig.xml">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="format-detection" content="telephone=no">
@@ -86,7 +86,7 @@ Actualizar página
 <header class="main-header" role="banner">
 <div class="header-content">
 <div class="logo-container">
-<img src="/icon.png" alt="FoxWeb" class="main-logo" width="50" height="50" loading="lazy">
+<img src="/assets/icon.png" alt="FoxWeb" class="main-logo" width="50" height="50" loading="lazy">
 <div class="logo-text">
 <h1>Fox<span>Web</span></h1>
 <p>Centro de descargas confiable</p>
@@ -274,7 +274,7 @@ GitHub
 <div class="footer-content">
 <div class="footer-section">
 <div class="footer-logo">
-<img src="/icon.png" alt="FoxWeb" width="30" height="30" loading="lazy">
+<img src="/assets/icon.png" alt="FoxWeb" width="30" height="30" loading="lazy">
 <h3>Fox<span>Web</span></h3>
 </div>
 <p class="footer-description">
