--- a/lincense.html
+++ b/lincense.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linsencia</title>
+    <title>Lincensia</title>
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <script type="module" src="https://cdn.jsdelivr.net/npm/zero-md@3?register"></script>
