--- a/index.html
+++ b/index.html
@@ -510,6 +510,29 @@ Descargar
 </div>
 </div>
 </div>
+<div id="youtubeModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="OptiOS10ModalTitle" aria-hidden="true">
+<div class="modal-content modal-compact">
+<button class="close" onclick="closeModal('youtubeModal')" aria-label="Cerrar modal">&times;</button>
+<i class="fa-brands fa-youtube" aria-hidden="true" style="font-size:2.5em;color:var(--primary);margin-bottom:10px;"></i>
+<h2 id="youtubeModal" style="margin-bottom:8px;color:var(--primary);font-size:1.3rem;">OPTIMIZAR YOUTUBE</h2>
+<p style="color:var(--text-dim);margin-bottom:15px;font-size:0.9rem;">Elije la version de youtube para que siempre abra de esa forma, la version Mobile es muchisimo mas ligera</p>
+<div class="modal-buttons-container">
+<a href="http://m.youtube.com/?persist_app=1&app=m" class="modal-btn bit-64" target="_blank" rel="noopener noreferrer" aria-label="Modo Mobile">
+<i class="fa-solid fa-mobile-alt" aria-hidden="true"></i>
+Modo Mobile
+</a>
+<a href="https://www.youtube.com/?persist_app=1&app=desktop" class="modal-btn bit-64" target="_blank" rel="noopener noreferrer" aria-label="Modo Escritorio">
+<i class="fa-solid fa-desktop" aria-hidden="true"></i>
+Modo Escritorio
+</a>
+</div>
+<div style="margin-top:15px;padding:12px;background:rgba(255,69,0,0.05);border-radius:6px;border-left:3px solid var(--primary);">
+<p style="margin:0;font-size:0.85em;color:var(--text-dim);">
+<i aria-hidden="true"></i>
+<strong>Importante:</strong> No se asuste si tu Youtube no cambia de modo, lo podras hacer aqui.
+</p>
+</div>
+</div>
 <div id="OptiOS10Modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="OptiOS10ModalTitle" aria-hidden="true">
 <div class="modal-content modal-compact">
 <button class="close" onclick="closeModal('OptiOS10Modal')" aria-label="Cerrar modal">&times;</button>
