--- a/index.html
+++ b/index.html
@@ -533,6 +533,8 @@ Modo Escritorio
 </p>
 </div>
 </div>
+</div>
+</div>
 <div id="OptiOS10Modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="OptiOS10ModalTitle" aria-hidden="true">
 <div class="modal-content modal-compact">
 <button class="close" onclick="closeModal('OptiOS10Modal')" aria-label="Cerrar modal">&times;</button>
