--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ Descargar
 </div>
 </div>
 </div>
-<div id="youtubeModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="OptiOS10ModalTitle" aria-hidden="true">
+<div id="youtubeModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="youtubeModalTitle" aria-hidden="true">
 <div class="modal-content modal-compact">
 <button class="close" onclick="closeModal('youtubeModal')" aria-label="Cerrar modal">&times;</button>
 <i class="fa-brands fa-youtube" aria-hidden="true" style="font-size:2.5em;color:var(--primary);margin-bottom:10px;"></i>
