--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
 <meta name="google-adsense-account" content="ca-pub-9082337258272819">
+<meta name="google-site-verification" content="88-PEEQt3La_Xe4AR_JEWdvO1ebnwusqZCL-wCgXwMw" />
 <title>FoxWeb | Centro de Descargas Confiable de Software Gratis</title>
 <meta name="description" content="FoxWeb: Tu centro de descargas confiable con software esencial gratis, sistemas Linux optimizados, juegos clásicos y APKs seguras. Descargas directas y verificadas.">
 <meta name="keywords" content="FoxOrange224, UCRv3ZZXkuPXaKSe588W1L9A, Linux, Geometry Dash, Computación, descargas gratis software, programas PC gratuitos, Linux descargas, juegos retro, APKs seguras, utilidades Windows, optimización PC, sistemas operativos">
