--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="es" data-theme="dark">
 <head>
 <meta charset="UTF-8">
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MQRQ3NW2');</script>
+<!-- End Google Tag Manager -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
 <meta name="google-adsense-account" content="ca-pub-9082337258272819">
 <meta name="google-site-verification" content="88-PEEQt3La_Xe4AR_JEWdvO1ebnwusqZCL-wCgXwMw" />
@@ -82,6 +89,10 @@ Actualizar página
 </div>
 </div>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQRQ3NW2"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!-- Eliminado el cursor personalizado -->
 <div class="bg-particles" aria-hidden="true"></div>
 <header class="main-header" role="banner">
