--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
 </div>
 </div>
 </div>
-<script id="cid0020000429750298705" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 582px;height: 345px;">{"handle":"foxweb","arch":"js","styles":{"a":"000000","b":100,"c":"ff6600","d":"FFFFFF","e":"000000","g":"ffffff","h":"c0c0c0","k":"000000","l":"000000","m":"000000","n":"FFFFFF","p":"10","q":"000000","r":100,"usricon":0.91,"surl":0,"fwtickm":1}}
-</script>
+<script id="cid0020000429750951182" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 616px;height: 398px;">{"handle":"foxweb","arch":"js","styles":{"a":"000000","b":100,"c":"ff9900","d":"FFFFFF","e":"000000","g":"ffffff","h":"c0c0c0","k":"bbbbbb","l":"000000","m":"000000","n":"FFFFFF","p":"10","q":"000000","r":100,"usricon":0.81,"pos":"bl","cv":1,"cvbg":"000000","cvfg":"ff9900","cvw":75,"cvh":30,"surl":0}}</script>
 
 <div class=bg-particles aria-hidden=true>
 </div>
