--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <meta name=twitter:creator content=@FoxOrange224>
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"WebSite","name":"FoxWeb - Centro de Descargas","url":"https://foxweb.vercel.app","description":"Centro de descargas confiable con software esencial, sistemas operativos, juegos clásicos y utilidades para PC y móviles","potentialAction":{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://foxweb.vercel.app#Programas?q={search_term_string}"},"query-input":"required name=search_term_string"},"publisher":{"@type":"Organization","name":"FoxWeb","logo":{"@type":"ImageObject","url":"https://i.imgur.com/PY9NKjr.png","width":512,"height":512}},"inLanguage":"es-ES","isAccessibleForFree":true,"license":"https://creativecommons.org/licenses/by-nc-sa/4.0/"}
 </script>
-
+<link rel="canonical" href="https://foxweb.pages.dev/" />
 <link rel=icon type=image/png href=/favicon-96x96.png sizes=96x96>
 
 <link rel=icon type=image/svg+xml href=/favicon.svg>
