--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="theme-color" content="#FF4500">
     <meta name="author" content="FoxOrange224">
     <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://foxweb.pages.dev/about" />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
