--- a/about/index.html
+++ b/about/index.html
@@ -25,8 +25,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="author" content="FoxOrange224">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://foxweb.pages.dev/about" />
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -735,7 +735,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="index.html" class="logo-link">
             <div class="logo-icon">
                 <!-- Tu logo personalizado sin cuadro de fondo -->
-                <img src="/assets/icon.png" alt="FoxWeb" width="50" height="50" loading="lazy">
+                <img src="/assets/foxweb/icon.png" alt="FoxWeb" width="50" height="50" loading="lazy">
             </div>
             <div class="logo-text">
                 <h1>Fox<span>Web</span></h1>
@@ -997,7 +997,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a href="https://discord.gg/r9v67gFRcp" class="member-link" target="_blank" aria-label="Discord">
                                     <i class="fa-brands fa-discord"></i>
                                 </a>
-                                <a href="https://github.com/foxorange224/foxorange224.github.io/issues" class="member-link" target="_blank" aria-label="Issues">
+                                <a href="https://github.com/foxorange224/FoxWeb/issues" class="member-link" target="_blank" aria-label="Issues">
                                     <i class="fa-solid fa-bug"></i>
                                 </a>
                             </div>
