--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property=og:description content="Centro de descargas con software esencial, sistemas operativos Linux, juegos retro y utilidades. Enlaces directos y verificados.">
 <meta property=og:url content=https://foxweb.vercel.app>
 <meta property=og:type content=website>
-<meta property=og:image content=https://i.imgur.com/PY9NKjr.png>
+<meta property=og:image content=/assets/foxweb/logo.png>
 <meta property=og:image:alt content="Logo de FoxWeb - Centro de descargas">
 <meta property=og:image:width content=1200>
 <meta property=og:image:height content=630>
@@ -23,19 +23,19 @@
 <meta name=twitter:card content=summary_large_image>
 <meta name=twitter:title content="FoxWeb | Tu Centro de Descargas Confiable">
 <meta name=twitter:description content="Descarga software gratis, sistemas Linux, juegos clásicos y APKs. Enlaces directos y duraderos para la comunidad.">
-<meta name=twitter:image content=https://i.imgur.com/PY9NKjr.png>
+<meta name=twitter:image content=/assets/foxweb/logo.png>
 <meta name=twitter:site content=@FoxOrange224>
 <meta name=twitter:creator content=@FoxOrange224>
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"WebSite","name":"FoxWeb - Centro de Descargas","url":"https://foxweb.vercel.app","description":"Centro de descargas confiable con software esencial, sistemas operativos, juegos clásicos y utilidades para PC y móviles","potentialAction":{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://foxweb.vercel.app#Programas?q={search_term_string}"},"query-input":"required name=search_term_string"},"publisher":{"@type":"Organization","name":"FoxWeb","logo":{"@type":"ImageObject","url":"https://i.imgur.com/PY9NKjr.png","width":512,"height":512}},"inLanguage":"es-ES","isAccessibleForFree":true,"license":"https://creativecommons.org/licenses/by-nc-sa/4.0/"}
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"WebSite","name":"FoxWeb - Centro de Descargas","url":"https://foxweb.vercel.app","description":"Centro de descargas confiable con software esencial, sistemas operativos, juegos clásicos y utilidades para PC y móviles","potentialAction":{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://foxweb.vercel.app#Programas?q={search_term_string}"},"query-input":"required name=search_term_string"},"publisher":{"@type":"Organization","name":"FoxWeb","logo":{"@type":"ImageObject","url":"/assets/foxweb/logo.png","width":512,"height":512}},"inLanguage":"es-ES","isAccessibleForFree":true,"license":"https://creativecommons.org/licenses/by-nc-sa/4.0/"}
 </script>
 <link rel="canonical" href="https://foxweb.pages.dev/" />
-<link rel=icon type=image/png href=/favicon-96x96.png sizes=96x96>
+<link rel=icon type=image/png href=/assets/favicon-96x96.png sizes=96x96>
 
-<link rel=icon type=image/svg+xml href=/favicon.svg>
+<link rel=icon type=image/svg+xml href=/assets/favicon.svg>
 
-<link rel="shortcut icon" href=/favicon.ico>
+<link rel="shortcut icon" href=/assets/favicon.ico>
 
-<link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
+<link rel=apple-touch-icon sizes=180x180 href=/assets/apple-touch-icon.png>
 <meta name=apple-mobile-web-app-title content=FoxWeb>
 
 <link rel=manifest href=/site.webmanifest>
@@ -44,7 +44,7 @@
 <meta name=application-name content=FoxWeb>
 <meta name=mobile-web-app-capable content=yes>
 <meta name=msapplication-TileColor content=#FF4500>
-<meta name=msapplication-TileImage content=https://i.imgur.com/TGNAk1M.png>
+<meta name=msapplication-TileImage content=/assets/foxweb/icon.png>
 <meta name=msapplication-config content=browserconfig.xml>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=format-detection content="telephone=no">
@@ -103,7 +103,7 @@
 
 <div class=header-content>
 
-<div class=logo-container><img src=https://i.imgur.com/TGNAk1M.png alt=FoxWeb class=main-logo width=50 height=50 loading=lazy>
+<div class=logo-container><img src=/assets/foxweb/icon.png alt=FoxWeb class=main-logo width=50 height=50 loading=lazy>
 
 <div class=logo-text><h1>Fox
 
@@ -295,7 +295,7 @@
 
 <div class=footer-section>
 
-<div class=footer-logo><img src=https://i.imgur.com/TGNAk1M.png alt="FoxWeb Logo pequeño" width=30 height=30 loading=lazy><h3>Fox
+<div class=footer-logo><img src=/assets/foxweb/icon.png alt="FoxWeb Logo pequeño" width=30 height=30 loading=lazy><h3>Fox
 
 <span>Web
 </span></h3>
