--- a/lincense/index.html
+++ b/lincense/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lincencia</title>
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <script type="module" src="https://cdn.jsdelivr.net/npm/zero-md@3?register"></script>
 
     <style>
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-    <zero-md src="/lincense.md">
+    <zero-md src="/lincense/lincense.md">
         <template>
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@5/github-markdown-dark.css" />
         </template>
