--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="theme-color" content="#FF4500">
     <meta name="author" content="FoxOrange224">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://foxweb.pages.dev/about" />
+    <link rel="canonical" href="https://foxweb.pages.dev/about/" />
     <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
     <link rel="shortcut icon" href="/assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -732,7 +732,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- Header -->
 <header class="about-header">
     <div class="header-container">
-        <a href="index.html" class="logo-link">
+        <a href="https://foxweb.pages.dev/" class="logo-link">
             <div class="logo-icon">
                 <!-- Tu logo personalizado sin cuadro de fondo -->
                 <img src="/assets/foxweb/icon.png" alt="FoxWeb" width="50" height="50" loading="lazy">
@@ -747,7 +747,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <button class="nav-btn" id="themeToggle" aria-label="Cambiar tema">
                 <i class="fa-solid fa-moon"></i>
             </button>
-            <a href="index.html" class="back-btn">
+            <a href="https://foxweb.pages.dev/" class="back-btn">
                 <i class="fa-solid fa-arrow-left"></i>
                 Volver al inicio
             </a>
