--- a/about/lincense/index.html
+++ b/about/lincense/index.html
@@ -7,10 +7,9 @@
     <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <script type="module" src="https://cdn.jsdelivr.net/npm/zero-md@3?register"></script>
-
     <style>
         body {
-            background-color: #0d1117; /* Fondo oscuro de GitHub */
+            background-color: #0d1117;
             margin: 0;
             padding: 20px;
             display: flex;
@@ -23,12 +22,10 @@
     </style>
 </head>
 <body>
-
-    <zero-md src="/lincense/lincense.md">
+    <zero-md src="lincense.md">
         <template>
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@5/github-markdown-dark.css" />
         </template>
     </zero-md>
-
 </body>
 </html>
