--- a/main/index.html
+++ b/main/index.html
@@ -257,9 +257,9 @@
     <section id=Juegos class=tab-content role=tabpanel aria-labelledby=tabJuegos aria-hidden=true>
 
         <div class=content-header>
-            <h2><i class="fa-solid fa-gamepad" aria-hidden=true></i>Juegos Clásicos</h2>
+            <h2><i class="fa-solid fa-gamepad" aria-hidden=true></i>Juegos para PC</h2>
 
-            <p>Títulos atemporales que funcionan en cualquier equipo
+            <p>Una colección de Juegos, bastante buenos para algunos
         </div>
 
         <div class=content-grid id=grid-Juegos aria-live=polite>
@@ -276,9 +276,9 @@
     <section id=Extras class=tab-content role=tabpanel aria-labelledby=tabExtras aria-hidden=true>
 
         <div class=content-header>
-            <h2><i class="fa-solid fa-toolbox" aria-hidden=true></i>Utilidades</h2>
+            <h2><i class="fa-solid fa-toolbox" aria-hidden=true></i>Algunos extras</h2>
 
-            <p>Drivers, herramientas y optimización para tu PC
+            <p>Drivers, personalizacion y otras cosas
         </div>
 
         <div class=content-grid id=grid-Extras aria-live=polite>
