--- a/404.html
+++ b/404.html
@@ -212,7 +212,7 @@
 <body>
     <div class="error-container">
         <div class="logo-container">
-            <img src="/assets/logo.png" alt="FoxWeb Logo" class="main-logo">
+            <img src="/assets/foxweb/logo.png" alt="FoxWeb Logo" class="main-logo">
         </div>
         <div class="error-code">404</div>
         <h1 class="error-title">¡Ups! Página no encontrada</h1>
@@ -230,7 +230,7 @@
                 <i class="fa-solid fa-arrow-left"></i>
                 Volver Atrás
             </a>
-            <a href="https://github.com/foxorange224/foxorange224.github.io/issues" class="error-btn secondary"
+            <a href="https://github.com/foxorange224/FoxWeb/issues" class="error-btn secondary"
                 target="_blank">
                 <i class="fa-solid fa-flag"></i>
                 Reportar Problema
