--- a/main/index.html
+++ b/main/index.html
@@ -15,7 +15,7 @@
 <meta property=og:title content="FoxWeb | Descarga Software Gratis, Sistemas y Juegos">
 <meta property=og:description
     content="Centro de descargas con software esencial, sistemas operativos Linux, juegos retro y utilidades. Enlaces directos y verificados.">
-<meta property=og:url content=https://foxweb.pages.dev/main/>
+<meta property=og:url content=https://foxweb.pages.dev/main />
 <meta property=og:type content=website>
 <meta property=og:image content=/assets/foxweb/logo.png>
 <meta property=og:image:alt content="Logo de FoxWeb - Centro de descargas">
@@ -136,9 +136,15 @@
             </div>
         </div>
 
-        <div class=header-actions><a href=https://discord.gg/r9v67gFRcp class=btn-discord target=_blank
-                rel="noopener noreferrer" aria-label="Unirse al servidor de Discord" title=Discord><i
-                    class="fa-brands fa-discord" aria-hidden=true></i>
+        <div class=header-actions><a href=/blog class=btn-discord target=_blank rel="noopener noreferrer"
+                aria-label="Blog" title=Blog><i class="fa-solid fa-blog" aria-hidden=true></i>
+
+                <span class=sr-only>Blog
+                </span></a>
+
+            <a href=https://discord.gg/r9v67gFRcp class=btn-discord target=_blank rel="noopener noreferrer"
+                aria-label="Unirse al servidor de Discord" title=Discord><i class="fa-brands fa-discord"
+                    aria-hidden=true></i>
 
                 <span class=sr-only>Discord
                 </span></a>
