--- a/main/index.html
+++ b/main/index.html
@@ -136,7 +136,7 @@
             </div>
         </div>
 
-        <div class=header-actions><a href=/blog class=btn-discord target=_blank rel="noopener noreferrer"
+        <div class=header-actions><a href=/blog class=btn-discord rel="noopener noreferrer"
                 aria-label="Blog" title=Blog><i class="fa-solid fa-blog" aria-hidden=true></i>
 
                 <span class=sr-only>Blog
