--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
-    <title>FoxWeb | Bienvenido a Tu Centro de Descargas Confiable</title>
+    <title>FoxWeb | Bienvenida</title>
     <meta name="description"
         content="Bienvenido a FoxWeb - Tu centro de descargas confiable con software esencial gratis, sistemas Linux optimizados, juegos clásicos y APKs seguras para PC y dispositivos móviles.">
     <meta name="keywords"
@@ -12,6 +12,12 @@
     <meta name="theme-color" content="#FF4500">
     <meta name="author" content="FoxOrange224">
     <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://foxweb.pages.dev" />
+    <link rel=icon type=image/png href=/assets/favicon-96x96.png sizes=96x96>
+
+    <link rel=icon type=image/svg+xml href=/assets/favicon.svg>
+
+    <link rel="shortcut icon" href=/assets/favicon.ico>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -342,7 +348,8 @@
 
             <div class="highlight-box">
                 <p><i class="fas fa-key" aria-hidden="true"></i> Contraseña para archivos comprimidos:
-                    <strong>foxorange224</strong></p>
+                    <strong>foxorange224</strong>
+                </p>
             </div>
 
             <div class="welcome-section">
