--- a/main/index.html
+++ b/main/index.html
@@ -30,9 +30,9 @@
 <meta name=twitter:image content=/assets/foxweb/logo.png>
 <meta name=twitter:site content=@FoxOrange224>
 <meta name=twitter:creator content=@FoxOrange224>
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"WebSite","name":"FoxWeb - Centro de Descargas","url":"https://foxweb.vercel.app","description":"Centro de descargas confiable con software esencial, sistemas operativos, juegos clásicos y utilidades para PC y móviles","potentialAction":{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://foxweb.vercel.app#Programas?q={search_term_string}"},"query-input":"required name=search_term_string"},"publisher":{"@type":"Organization","name":"FoxWeb","logo":{"@type":"ImageObject","url":"/assets/foxweb/logo.png","width":512,"height":512}},"inLanguage":"es-ES","isAccessibleForFree":true,"license":"https://creativecommons.org/licenses/by-nc-sa/4.0/"}
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"WebSite","name":"FoxWeb - Centro de Descargas","url":"https://foxweb.pages.dev","description":"Centro de descargas confiable con software esencial, sistemas operativos, juegos clásicos y utilidades para PC y móviles","potentialAction":{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://foxweb.pages.dev#Programas?q={search_term_string}"},"query-input":"required name=search_term_string"},"publisher":{"@type":"Organization","name":"FoxWeb","logo":{"@type":"ImageObject","url":"/assets/foxweb/logo.png","width":512,"height":512}},"inLanguage":"es-ES","isAccessibleForFree":true,"license":"https://creativecommons.org/licenses/by-nc-sa/4.0/"}
 </script>
-<link rel="canonical" href="https://foxweb.pages.dev/" />
+<link rel="canonical" href="https://foxweb.pages.dev/main" />
 <link rel=icon type=image/png href=/assets/favicon-96x96.png sizes=96x96>
 
 <link rel=icon type=image/svg+xml href=/assets/favicon.svg>
@@ -127,9 +127,8 @@
 
             <div class=logo-text>
                 <h1>Fox
-
-                    <span>Web
-                    </span>
+                <span>Web
+                </span>
                 </h1>
 
                 <p>Centro de descargas confiable
@@ -381,7 +380,7 @@
             <p class=footer-description>Centro de descargas confiable con software verificado y enlaces directos.
                 Todo el contenido es gratuito y seguro.
 
-            <p class=footer-copyright>© Copyright 2026 FoxOrange224 | FoxWeb
+            <p class=footer-copyright>© Copyright 2025 - 2026 FoxOrange224 | FoxWeb
         </div>
 
         <div class=footer-section>
