--- a/index.html
+++ b/index.html
@@ -4,20 +4,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
-    <title>FoxWeb | Bienvenida</title>
+    <title>FoxWeb - Descargas Gratis de Software, Linux, Juegos y APKs Seguras | Centro de Descargas Confiable</title>
     <meta name="description"
-        content="Bienvenido a FoxWeb - Tu centro de descargas confiable con software esencial gratis, sistemas Linux optimizados, juegos clásicos y APKs seguras para PC y dispositivos móviles.">
+        content="✅ FoxWeb: Tu centro de descargas confiable con software gratis, Linux optimizado, juegos retro y APKs seguras. Más de 50 programas verificados sin malware. Descarga directa y segura para PC y móviles.">
     <meta name="keywords"
-        content="FoxWeb, descargas gratis, software PC, Linux optimizado, juegos retro, APKs Android, herramientas Windows, programas gratuitos">
+        content="descargas gratis, software PC gratis, Linux optimizado, juegos retro gratis, APKs Android seguras, programas Windows, herramientas gratuitas, descargas seguras, FoxWeb, FoxOrange224">
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="FoxWeb - Centro de Descargas Gratis y Seguras">
+    <meta property="og:description"
+        content="Descarga software esencial, sistemas Linux optimizados, juegos clásicos y APKs verificadas. Todo gratis y sin malware.">
+    <meta property="og:image" content="https://foxweb.pages.dev/assets/foxweb/icon.png">
+    <meta property="og:image:alt" content="Logo de FoxWeb - Centro de descargas confiable">
+    <meta property="og:url" content="https://foxweb.pages.dev">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="FoxWeb">
+    <meta property="og:locale" content="es_ES">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="FoxWeb - Descargas Gratis de Software Verificado">
+    <meta name="twitter:description"
+        content="Software esencial, Linux optimizado, juegos retro y APKs seguras. Descargas verificadas y sin riesgos.">
+    <meta name="twitter:image" content="https://foxweb.pages.dev/assets/foxweb/icon.png">
+    <meta name="twitter:site" content="@FoxOrange224">
+    <meta name="twitter:creator" content="@FoxOrange224">
+
+    <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#FF4500">
     <meta name="author" content="FoxOrange224">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://foxweb.pages.dev" />
-    <link rel=icon type=image/png href=/assets/favicon-96x96.png sizes=96x96>
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
+    <meta name="apple-mobile-web-app-title" content="FoxWeb">
+    <meta name="application-name" content="FoxWeb">
 
-    <link rel=icon type=image/svg+xml href=/assets/favicon.svg>
+    <!-- Canonical & Alternate URLs -->
+    <link rel="canonical" href="https://foxweb.pages.dev">
+    <link rel="alternate" hreflang="es" href="https://foxweb.pages.dev">
+    <link rel="alternate" hreflang="es-ES" href="https://foxweb.pages.dev">
+    <link rel="alternate" hreflang="x-default" href="https://foxweb.pages.dev">
 
-    <link rel="shortcut icon" href=/assets/favicon.ico>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
+    <link rel="shortcut icon" href="/assets/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "FoxWeb",
+        "alternateName": "Centro de Descargas FoxWeb",
+        "url": "https://foxweb.pages.dev",
+        "description": "Centro de descargas confiable con software esencial gratis, sistemas Linux optimizados, juegos clásicos y APKs seguras para PC y dispositivos móviles.",
+        "author": {
+            "@type": "Person",
+            "name": "FoxOrange224"
+        },
+        "publisher": {
+            "@type": "Organization",
+            "name": "FoxWeb",
+            "logo": {
+                "@type": "ImageObject",
+                "url": "https://foxweb.pages.dev/assets/foxweb/icon.png",
+                "width": "120",
+                "height": "120"
+            }
+        },
+        "inLanguage": "es-ES",
+        "keywords": "descargas gratis, software PC, Linux optimizado, juegos retro, APKs Android, herramientas Windows",
+        "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD",
+            "availability": "https://schema.org/InStock"
+        },
+        "sameAs": [
+            "https://www.youtube.com/@FoxOrange224",
+            "https://discord.gg/r9v67gFRcp",
+            "https://github.com/foxorange224"
+        ]
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [{
+            "@type": "Question",
+            "name": "¿Es seguro descargar software desde FoxWeb?",
+            "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Sí, todos los enlaces en FoxWeb son verificados regularmente para garantizar seguridad y disponibilidad. Cada archivo es revisado para evitar malware, adware y software no deseado."
+            }
+        }, {
+            "@type": "Question",
+            "name": "¿Qué tipo de contenido ofrece FoxWeb?",
+            "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "FoxWeb ofrece programas esenciales para PC, sistemas operativos Linux optimizados, juegos clásicos retro y APKs verificadas para Android. Todo completamente gratis."
+            }
+        }, {
+            "@type": "Question",
+            "name": "¿Necesito contraseña para los archivos descargados?",
+            "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Sí, la contraseña para extraer archivos comprimidos es: foxorange224"
+            }
+        }]
+    }
+    </script>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -207,24 +308,27 @@
     </style>
 </head>
 
-<body>
+<body itemscope itemtype="https://schema.org/WebPage">
     <header class="main-header" role="banner">
         <div class="header-content">
             <div class="logo-container">
-                <img src="/assets/foxweb/icon.png" alt="FoxWeb" class="main-logo" width="50" height="50" loading="lazy">
+                <img src="/assets/foxweb/icon.png" alt="FoxWeb - Logo del centro de descargas" class="main-logo"
+                    width="50" height="50" loading="lazy" itemprop="logo">
                 <div class="logo-text">
                     <h1>Fox<span>Web</span></h1>
                     <p>Centro de descargas confiable</p>
                 </div>
             </div>
             <div class="header-actions">
-                <a href="https://discord.gg/r9v67gFRcp" class="btn-discord" target="_blank" rel="noopener noreferrer"
-                    aria-label="Unirse al servidor de Discord" title="Discord">
+                <a href="https://discord.gg/r9v67gFRcp" class="btn-discord" target="_blank"
+                    rel="noopener noreferrer nofollow" aria-label="Unirse al servidor de Discord de FoxWeb"
+                    title="Discord FoxWeb">
                     <i class="fa-brands fa-discord" aria-hidden="true"></i>
                     <span class="sr-only">Discord</span>
                 </a>
                 <a href="https://www.youtube.com/@FoxOrange224" class="btn-youtube" target="_blank"
-                    rel="noopener noreferrer" aria-label="Visitar canal de YouTube" title="YouTube">
+                    rel="noopener noreferrer nofollow" aria-label="Visitar canal de YouTube de FoxOrange224"
+                    title="YouTube FoxWeb">
                     <i class="fa-brands fa-youtube" aria-hidden="true"></i>
                     <span class="sr-only">YouTube</span>
                 </a>
@@ -240,7 +344,7 @@
 
     <main class="welcome-main" role="main">
         <section class="welcome-hero">
-            <img src="/assets/foxweb/icon.png" alt="FoxWeb Logo" class="logo-large">
+            <img src="/assets/foxweb/icon.png" alt="FoxWeb Logo - Centro de descargas gratis" class="logo-large">
             <h1>Bienvenido a <span>FoxWeb</span></h1>
             <p>Tu destino confiable para descargas de software esencial, sistemas optimizados, juegos clásicos y
                 aplicaciones verificadas.</p>
@@ -397,7 +501,8 @@
         <div class="footer-content">
             <div class="footer-section">
                 <div class="footer-logo">
-                    <img src="/assets/foxweb/icon.png" alt="FoxWeb Logo pequeño" width="30" height="30" loading="lazy">
+                    <img src="/assets/foxweb/icon.png" alt="FoxWeb Logo pequeño - Centro de descargas" width="30"
+                        height="30" loading="lazy">
                     <h3>Fox<span>Web</span></h3>
                 </div>
                 <p class="footer-description">Centro de descargas confiable con software verificado y enlaces directos.
@@ -408,15 +513,18 @@
                 <h4>Enlaces Rápidos</h4>
                 <ul class="footer-links" role="list">
                     <li role="listitem">
-                        <a href="https://www.youtube.com/@FoxOrange224" target="_blank" class="footer-link">
+                        <a href="https://www.youtube.com/@FoxOrange224" target="_blank" class="footer-link"
+                            rel="noopener noreferrer nofollow">
                             <i class="fa-brands fa-youtube" aria-hidden="true"></i>YouTube</a>
                     </li>
                     <li role="listitem">
-                        <a href="https://discord.gg/r9v67gFRcp" target="_blank" class="footer-link">
+                        <a href="https://discord.gg/r9v67gFRcp" target="_blank" class="footer-link"
+                            rel="noopener noreferrer nofollow">
                             <i class="fa-brands fa-discord" aria-hidden="true"></i>Discord</a>
                     </li>
                     <li role="listitem">
-                        <a href="https://github.com/foxorange224" target="_blank" class="footer-link">
+                        <a href="https://github.com/foxorange224" target="_blank" class="footer-link"
+                            rel="noopener noreferrer nofollow">
                             <i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
                     </li>
                 </ul>
