--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
     <header class="main-header" role="banner">
         <div class="header-content">
             <div class="logo-container">
-                <img src="/assets/foxweb/logo.png" alt="FoxWeb - Logo del centro de descargas" width="140" height="60"
-                    loading="lazy" itemprop="logo">
+                <a href="/"><img src="/assets/foxweb/logo.png" alt="FoxWeb - Logo del centro de descargas" width="140"
+                        height="60" loading="lazy" itemprop="logo"></a>
                 <div class="logo-text">
                     <a href="/" class="active"><i class="fa-solid fa-house-chimney"></i> Bienvenida</a>
                 </div>
