--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Meta descripción optimizada - menos de 160 caracteres -->
     <meta name="description"
-        content="✅ FoxWeb: Descargas gratis de software, Linux optimizado, juegos retro y APKs seguras. Programas verificados sin malware.">
+        content="✅ Descarga software gratis en FoxWeb: Linux optimizado, juegos retro, APKs Android seguras. Más de 50 programas verificados sin virus. Enlaces directos.">
 
     <!-- Keywords mejoradas -->
     <meta name="keywords"
