--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9082337258272819"
+    crossorigin=anonymous>
+    </script>
     <!-- Schema.org optimizado -->
     <script type="application/ld+json">
     {
