--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
     <!-- Canonical optimizado -->
     <link rel="canonical" href="https://foxweb.pages.dev">
+    <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+    </script>
 
     <!-- Alternate hreflang simplificado -->
     <link rel="alternate" hreflang="es" href="https://foxweb.pages.dev">
@@ -54,8 +56,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9082337258272819"
-    crossorigin=anonymous>
-    </script>
+        crossorigin=anonymous>
+        </script>
     <!-- Schema.org optimizado -->
     <script type="application/ld+json">
     {
@@ -380,6 +382,8 @@
 </head>
 
 <body itemscope itemtype="https://schema.org/WebPage">
+    <amp-auto-ads type="adsense" data-ad-client="ca-pub-9082337258272819">
+    </amp-auto-ads>
     <header class="main-header" role="banner">
         <div class="header-content">
             <div class="logo-container">
