Fixed "Lincense" to "License"

--- a/about/license/index.html
+++ b/about/license/index.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <zero-md src="lincense.md">
+    <zero-md src="license.md">
         <template>
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@5/github-markdown-dark.css" />
         </template>
